fullCalendar and posts/paginator-v2 issues fixed, and calendar data added

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,10 @@ collections:
   workshops:
     output: true
     permalink: /:collection/:path/
+  events:
+    output: true
+    permalink: /events/:path/
+    title: Events
 
 # Defaults
 defaults:
